--- a/Data/RCleaning_Garmin_Strava.Rmd
+++ b/Data/RCleaning_Garmin_Strava.Rmd
@@ -330,15 +330,13 @@ table(newFullData$RunType)
 
 Looks like I've got a lot of "plain" runs and a lot of recovery runs. Just goes to show that you don't need to kill yourself out there every time you run to race a marathon! 
 
-//The last thing I think I need to do it is to convert the factor **Month** factor variable into a character variable, //based #off of the **monthNum** variable, and then remove **monthNum**, since it then would no longer be needed. 
 
-I should've done this earlier, but it just came to me now that the current class of **Month** won't work for time-series-type data.
+Now to change my format for my **Avg.HR** field to a number, since it's currently a factor
 
-```{r convert month}
-newFullData$Month <- month.abb[newFullData$monthNum]
-#newFullData$monthNum <- NULL
-str(newFullData$Month)
+```{r HR to number}
 ```
+
+
 
 Alright, cool.
 
