--- a/R_Marathon_Analysis.Rmd
+++ b/R_Marathon_Analysis.Rmd
@@ -3,6 +3,7 @@ title: "Marathon Training Plan Data Cleaning"
 author: "Steve Newns"
 date: "February 21, 2017"
 output:
+  github_document: default
   html_document: default
   word_document: default
 ---
